@@ -1,3 +1,6 @@
+2012-08-06 2.1.1 Sven-S. Porst <porst@sub.uni-goettingen.de>
+	* Fix jQuery vs IE problem with animations in menu display style
+
 2012-07-27 2.1.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
 	* Change field names in Tev records according to the GND format
 	* Add ability to start the tree with more than one element at the root level
